<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph.xml"
    app:startDestination="@+id/sendFragment">

    <fragment
        android:id="@+id/sendFragment"
        android:name="dev.estebanbarrios.airshare.presentation.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/receiveFragment"
        android:name="dev.estebanbarrios.airshare.presentation.receive.ReceiveFragment"
        android:label="@string/menu_receive"
        tools:layout="@layout/fragment_receive" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="dev.estebanbarrios.airshare.presentation.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

</navigation>